# tgsync

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
appdata/: config.example.json
src/tgsync/: config.py  logger.py  main.py
src/tgsync/core/: get_client.py  link_media.py  list_chats.py  save_media.py  sync_chat.py
src/tgsync/db/: entities.py  session.py
src/tgsync/extras/: file_bots.py
