[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tgsync"
version = "0.1.0"
description = "Synchronize Telegram messages and media to local storage."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "x-hachiroku", email = "gh.x86@yukimura.moe" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "loguru>=0.7.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary",
    "Telethon>=1.0.0",
    "cryptg",
    "tabulate",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tgsync"]

[project.urls]
Homepage = "https://github.com/x-hachiroku/tgsync"
